Fix use cases heading being wrong colour, fix underline on hover for cards

--- a/content/css/jenkins.css
+++ b/content/css/jenkins.css
@@ -211,6 +211,7 @@ body .card-block {
 
 .jumbotron.featured {
   background-color: #168bb9;
+  --color: white;
 }
 
 .jumbotron.featured a {
@@ -829,7 +830,7 @@ body .ji-dated-list>.post {
 }
 
 .ji-dated-list>.post>.article>.url {
-  color: #999;
+  color: var(--color--secondary);
   font-size: 75%
 }
 
