--- a/content/stylesheets/core/_headings.scss
+++ b/content/stylesheets/core/_headings.scss
@@ -5,19 +5,19 @@ h1 {
 }
 
 h2 {
-  font-size: 1.6rem;
+  font-size: 1.65rem;
   font-weight: 700;
   color: var(--color);
 }
 
 h3 {
-  font-size: 1.2rem;
+  font-size: 1.3rem;
   font-weight: 700;
   color: var(--color);
 }
 
 h4 {
-  font-size: 0.8rem;
+  font-size: 0.95rem;
   font-weight: 700;
   color: var(--color);
 }
