--- a/content/stylesheets/pages/_use-cases.scss
+++ b/content/stylesheets/pages/_use-cases.scss
@@ -11,13 +11,13 @@
     flex-direction: column;
     border-radius: 0.66rem;
     padding: 1rem;
+    color: rgba(0, 0, 0, .9) !important;
 
     h3 {
       font-size: 1.3rem;
       min-height: 3rem;
-      color: rgba(0, 0, 0, .9);
+      color: inherit;
       text-align: center;
-      text-decoration: none;
     }
 
     img {
@@ -27,9 +27,7 @@
     }
 
     &.dark {
-      h3 {
-        color: rgba(255, 255, 255, .9) !important;
-      }
+      color: rgba(255, 255, 255, .9) !important;
 
       img {
         filter: invert(1);
